--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "deps_/proto"]
 	path = deps_/proto
 	url = https://github.com/starschema/virtdb-proto.git
+[submodule "deps_/utils"]
+	path = deps_/utils
+	url = https://github.com/starschema/virtdb-utils.git
